--- a/src/Pages/detalhamento.html
+++ b/src/Pages/detalhamento.html
@@ -27,7 +27,7 @@
                     <li>Cor: Verde</li>
                 </ul>
                 <h3 class="produto-preco">R$ 49,90</h3>
-                <button class="btn btn-success btn-lg mt-3">Comprar Agora</button>
+                <button class="btn btn-success btn-lg mt-3">Compre agora</button>
                 <button class="btn btn-outline-light btn-lg mt-3 ms-2">Adicionar ao Carrinho</button>
             </div>
         </div>
@@ -42,7 +42,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Caneca Sustentável</h5>
                         <p class="card-text">Feita com bambu natural, perfeita para bebidas quentes.</p>
-                        <a href="#" class="btn btn-success">Ver Detalhes</a>
+                        <a href="#" class="btn btn-success">Compre agora</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Sacola Ecológica</h5>
                         <p class="card-text">Produzida com algodão orgânico, resistente e reutilizável.</p>
-                        <a href="#" class="btn btn-success">Ver Detalhes</a>
+                        <a href="#" class="btn btn-success">Compre agora</a>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Canudo Reutilizável</h5>
                         <p class="card-text">Aço inoxidável, fácil de limpar e vem com estojo portátil.</p>
-                        <a href="#" class="btn btn-success">Ver Detalhes</a>
+                        <a href="#" class="btn btn-success">Compre agora</a>
                     </div>
                 </div>
             </div>
