--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid" id="carrossel-holder">
         <div class="row">
             <div class="col-xl-2 col-sm-1 d-flex justify-content-center align-items-start">
-                <img src="src/assets/assetsIndex/bolhas.png" alt="bolhas" class="img-fluid rounded">
+                <img src="src/assets/assetsIndex/bolhas.png" alt="bolhas" class="img-fluid rounded bolhas">
             </div>
             <div class="col-xl-8 col-sm-10">
                 <div id="carrossel-produtos" class="carousel slide" data-ride="carousel" data-interval="3000">
@@ -25,7 +25,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">30%off</div>
+                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">30%OFF</div>
                             <img src="src/assets/assetsIndex/camiseta.png" alt="camisa verde" class="d-block w-80 img-fluid">
                             <div class="carousel-caption d-none d-md-block legenda">
                                 <div class="texto-legenda rounded">
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">20%off</div>
+                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">20%OFF</div>
                             <img src="src/assets/assetsIndex/creme.png" alt="creme natura" class="d-block w-80 img-fluid">
                             <div class="carousel-caption d-none d-md-block legenda">
                                 <div class="texto-legenda rounded">
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">35%off</div>
+                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">35%OFF</div>
                             <img src="src/assets/assetsIndex/umidificador.png" alt="Umidificador" class="d-block w-80 img-fluid">
                             <div class="carousel-caption d-none d-md-block legenda">
                                 <div class="texto-legenda rounded">
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">50%off</div>
+                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">50%OFF</div>
                             <img src="src/assets/assetsIndex/calca2.png" alt="Calça" class="d-block w-80 img-fluid">
                             <div class="carousel-caption d-none d-md-block legenda">
                                 <div class="texto-legenda rounded">
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">10%off</div>
+                            <div class="desconto bg-info rounded-circle d-flex justify-content-center align-items-center">10%OFF</div>
                             <img src="src/assets/assetsIndex/livro.png" alt="Livro sustentavel" class="d-block w-80 img-fluid">
                             <div class="carousel-caption d-none d-md-block legenda">
                                 <div class="texto-legenda rounded">
@@ -83,8 +83,129 @@
                 </div>
             </div>
         <div class="col-xl-2 col-sm-1 d-flex justify-content-center align-items-end">
-            <img src="src/assets/assetsIndex/bolhas.png" alt="bolhas" class="img-fluid rounded">
+            <img src="src/assets/assetsIndex/bolhas.png" alt="bolhas" class="img-fluid rounded bolhas">
         </div>
+        </div>
+    </div>
+    <div class="container-fluid produtos">
+        <div class="row card-group">
+            <div class="col-md-3 d-flex">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Roupas Sustentáveis</h3>
+                        <p class="card-text">Opções perfeitas para ficar no estilo enquanto ajuda o meio ambiente</p>
+                        <a href="#" class="btn btn-success">Eu quero!</a>
+                        <img src="src/assets/assetsProdutos/logo-roupas.png" alt="logo" class="card-img-bottom logo">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/Vestido1.png" alt="vestido1" class="card-img-top border border-info">
+                        <h3 class="card-title">Vestido verde sustentável para o verão</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/chapeu.png" alt="chapeu" class="card-img-top border border-info">
+                        <h3 class="card-title">Chapéu de palha, feito de madeira de reflorestamento</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/camiseta1.png" alt="camiseta" class="card-img-top border border-info">
+                        <h3 class="card-title">Camiseta com botões, cor bege</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row card-group">
+            <div class="col-md-3 d-flex">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Produtos de beleza</h3>
+                        <p class="card-text">Ficar bobonito e ainda ajudar o meio ambiente, não tem coisa melhor né</p>
+                        <a href="#" class="btn btn-success">Eu quero!</a>
+                        <img src="src/assets/assetsProdutos/beleza-logo.png" alt="logo" class="card-img-bottom logo">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/sabonete.png" alt="sabonete" class="card-img-top border border-info">
+                        <h3 class="card-title">Sabonetes diversos frutos amazônicos</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/shampoo.png" alt="shampoo" class="card-img-top border border-info">
+                        <h3 class="card-title">Shampoo para cabelos oleosos</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/creme.png" alt="creme" class="card-img-top border border-info">
+                        <h3 class="card-title">Creme corporal tomate, para dar aquele toque refrescante</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row card-group">
+            <div class="col-md-3 d-flex">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Vamos deixar nossas casas cada vez mais bio amigáveis</h3>
+                        <p class="card-text">Sua casa não pode ficar sem esses itens, além de bonitos, são sustentáveis</p>
+                        <a href="#" class="btn btn-success">Eu quero!</a>
+                        <img src="src/assets/assetsProdutos/logo-casa.png" alt="logo" class="card-img-bottom logo">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/vaso.png" alt="vaso" class="card-img-top border border-info">
+                        <h3 class="card-title">Vasos diversos feitos de cerâmica</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/pote.png" alt="pote" class="card-img-top border border-info">
+                        <h3 class="card-title">Pote com tampa de madeira, perfeito para organização</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body d-flex flex-column text-center">
+                        <img src="src/assets/assetsProdutos/bag.png" alt="ecobag" class="card-img-top border border-info">
+                        <h3 class="card-title">Ecobag, as compras nunca foram tão leves</h3>
+                        <a href="#" class="btn btn-success">Sobre</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
