--- a/src/Pages/categorias.html
+++ b/src/Pages/categorias.html
@@ -79,6 +79,99 @@
               </div>
             </div>
           </div>
+
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/sacola-ecologica.webp" class="card-img-top" alt="Produto 4">
+              <div class="card-body">
+                <h5 class="card-title">Bolsa Ecológica</h5>
+                <p class="card-text text-success fw-bold">R$ 75,00</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/creme-hidratante.jpg" class="card-img-top" alt="Produto 5">
+              <div class="card-body">
+                <h5 class="card-title">Creme Hidratante Natural</h5>
+                <p class="card-text text-success fw-bold">R$ 65,00</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/escova-de-bambu.jpg" class="card-img-top" alt="Produto 6">
+              <div class="card-body">
+                <h5 class="card-title">Escova de Bambu</h5>
+                <p class="card-text text-success fw-bold">R$ 19,90</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/garrafa-reutilizavel.webp" class="card-img-top" alt="Produto 7">
+              <div class="card-body">
+                <h5 class="card-title">Garrafa Reutilizável</h5>
+                <p class="card-text text-success fw-bold">R$ 79,90</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/tenis-sustentavel.jpeg" class="card-img-top" alt="Produto 8">
+              <div class="card-body">
+                <h5 class="card-title">Tênis Sustentável</h5>
+                <p class="card-text text-success fw-bold">R$ 220,00</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/painel-solar.jpg" class="card-img-top" alt="Produto 9">
+              <div class="card-body">
+                <h5 class="card-title">Painel Solar Portátil</h5>
+                <p class="card-text text-success fw-bold">R$ 350,00</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/kit-canudo-inox.webp" class="card-img-top" alt="Produto 10">
+              <div class="card-body">
+                <h5 class="card-title">Kit Canudos Inox</h5>
+                <p class="card-text text-success fw-bold">R$ 39,90</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/detergente-biodegradavel.webp" class="card-img-top" alt="Produto 11">
+              <div class="card-body">
+                <h5 class="card-title">Detergente Biodegradável</h5>
+                <p class="card-text text-success fw-bold">R$ 25,00</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card product-card shadow-sm">
+              <img src="..//assets/categorias/esponja-de-coco.jpg" class="card-img-top" alt="Produto 12">
+              <div class="card-body">
+                <h5 class="card-title">Esponja de Coco</h5>
+                <p class="card-text text-success fw-bold">R$ 45,90</p>
+                <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
