--- a/src/Pages/categorias.html
+++ b/src/Pages/categorias.html
@@ -6,7 +6,57 @@
   <link rel="icon" href="src/assets/Icone-page.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="..//CSS/categorias.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+  <style>
+    .bgVerde {
+      background-color: #064420
+    }
+    .textBege {
+      color: #f5f5dc
+    }
+    .textBege:hover {
+      color: #dcdcc0
+    }
+    .navbar {
+      padding: 1rem 0
+    }
+    .navbar-brand {
+      font-size: 1.5rem;
+      letter-spacing: 2px;
+      text-transform: uppercase
+    }
+    footer {
+      border-top: 1px solid rgba(245,245,220,0.2)
+    }
+    .footerLink {
+      text-decoration: none;
+      color: #f5f5dc
+    }
+    .footerLink:hover {
+      color: #dcdcc0
+    }
+  </style>
+
+
 </head>
+    <nav class="navbar navbar-expand-lg bgVerde sticky-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand font-weight-bold textBege" href="#">Sussa</a>
+      <button class="navbar-toggler border-0 textBege" type="button" data-toggle="collapse" data-target="#menu">
+        <i class="bi bi-list fs-1"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav ml-auto d-flex align-items-center">
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../../index.html">Início</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/categorias.html">Categorias</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/contato.html">Contatos</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/detalhamento.html">Detalhamento</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
 <body>
   <div class="container my-5">
     <div class="row">
@@ -73,7 +123,7 @@
             <div class="card product-card shadow-sm">
               <img src="..//assets/categorias/utensilios-de-bambu.jpg" class="card-img-top" alt="Produto 3">
               <div class="card-body">
-                <h5 class="card-title">Kit Utensílios de Bambu</h5>
+                <h5 class="card-title">Utensílios de Bambu</h5>
                 <p class="card-text text-success fw-bold">R$ 120,00</p>
                 <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
               </div>
@@ -94,7 +144,7 @@
             <div class="card product-card shadow-sm">
               <img src="..//assets/categorias/creme-hidratante.jpg" class="card-img-top" alt="Produto 5">
               <div class="card-body">
-                <h5 class="card-title">Creme Hidratante Natural</h5>
+                <h5 class="card-title">Creme Hidratante</h5>
                 <p class="card-text text-success fw-bold">R$ 65,00</p>
                 <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
               </div>
@@ -156,7 +206,7 @@
             <div class="card product-card shadow-sm">
               <img src="..//assets/categorias/detergente-biodegradavel.webp" class="card-img-top" alt="Produto 11">
               <div class="card-body">
-                <h5 class="card-title">Detergente Biodegradável</h5>
+                <h5 class="card-title">Detergente</h5>
                 <p class="card-text text-success fw-bold">R$ 25,00</p>
                 <a href="#" class="btn btn-outline-success w-100">Adicionar ao Carrinho</a>
               </div>
@@ -177,5 +227,35 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <footer class="bgVerde textBege pt-5 pb-3 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5 class="font-weight-bold">Sussa</h5>
+          <p class="small">Sua experiência digital com sustentabilidade.</p>
+        </div>
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Links rápidos</h6>
+          <ul class="list-unstyled">
+            <li><a class="footerLink" href="../../index.html">Início</a></li>
+            <li><a class="footerLink" href="../Pages/categorias.html">Categorias</a></li>
+            <li><a class="footerLink" href="../Pages/contato.html">Contatos</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Siga-nos</h6>
+          <div class="d-flex">
+            <a href="#" class="footerLink mr-3 fs-4"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="footerLink mr-3 fs-4"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="footerLink fs-4"><i class="bi bi-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center mt-4">
+        <small>© 2025 Sussa - Todos os direitos reservados</small>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
