--- a/src/Pages/contato.html
+++ b/src/Pages/contato.html
@@ -3,21 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contatos</title>
     <link rel="icon" href="../assets/assetsIndex/Icone-page.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/contato.css">
-    <title>Document</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+  <style>
+    .bgVerde {
+      background-color: #064420
+    }
+    .textBege {
+      color: #f5f5dc
+    }
+    .textBege:hover {
+      color: #dcdcc0
+    }
+    .navbar {
+      padding: 1rem 0
+    }
+    .navbar-brand {
+      font-size: 1.5rem;
+      letter-spacing: 2px;
+      text-transform: uppercase
+    }
+    footer {
+      border-top: 1px solid rgba(245,245,220,0.2)
+    }
+    .footerLink {
+      text-decoration: none;
+      color: #f5f5dc
+    }
+    .footerLink:hover {
+      color: #dcdcc0
+    }
+  </style>
+
 </head>
 <body>
-    <div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-8 col-lg-6">
-      <h2 class="mb-4 text-center">Entre em Contato</h2>
-<form>
-  <div class="form-group">
-    <label for="nome">Nome</label>
-    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite seu nome" required>
-  </div>
+  <nav class="navbar navbar-expand-lg bgVerde sticky-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand font-weight-bold textBege" href="#">Sussa</a>
+      <button class="navbar-toggler border-0 textBege" type="button" data-toggle="collapse" data-target="#menu">
+        <i class="bi bi-list fs-1"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav ml-auto d-flex align-items-center">
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../../index.html">Início</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/categorias.html">Categorias</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/contato.html">Contatos</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/detalhamento.html">Detalhamento</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6">
+        <h2 class="mb-4 text-center">Entre em Contato</h2>
+        <form>
+          <div class="form-group">
+          <label for="nome">Nome</label>
+          <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite seu nome" required>
+          </div>
 
   <div class="form-group">
     <label for="email">E-mail</label>
@@ -51,5 +100,39 @@
 
   <button type="submit" class="btn btn-success">Enviar</button>
 </form>
+</div>
+</div>
+</div>
+
+    <footer class="bgVerde textBege pt-5 pb-3 mt-5">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4">
+          <h5 class="font-weight-bold">Sussa</h5>
+          <p class="small">Sua experiência digital com sustentabilidade.</p>
+        </div>
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Links rápidos</h6>
+          <ul class="list-unstyled">
+            <li><a class="footerLink" href="../../index.html">Início</a></li>
+            <li><a class="footerLink" href="./src/Pages/categorias.html">Categorias</a></li>
+            <li><a class="footerLink" href="./src/Pages/contato.html">Contatos</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Siga-nos</h6>
+          <div class="d-flex">
+            <a href="#" class="footerLink mr-3 fs-4"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="footerLink mr-3 fs-4"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="footerLink fs-4"><i class="bi bi-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center mt-4">
+        <small>© 2025 Sussa - Todos os direitos reservados</small>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
