--- a/src/Pages/detalhamento.html
+++ b/src/Pages/detalhamento.html
@@ -1,72 +1,119 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhamento do Produto</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="detalhamento.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalhamento do Produto</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="detalhamento.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+  <style>
+    .bgVerde {
+      background-color: #064420;
+    }
+    .textBege {
+      color: #f5f5dc;
+    }
+    .textBege:hover {
+      color: #dcdcc0;
+    }
+    .navbar {
+      padding: 1rem 0;
+    }
+    .navbar-brand {
+      font-size: 1.5rem;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+    footer {
+      border-top: 1px solid rgba(245,245,220,0.2);
+    }
+    .footerLink {
+      text-decoration: none;
+      color: #f5f5dc;
+    }
+    .footerLink:hover {
+      color: #dcdcc0;
+    }
+  </style>
 </head>
 <body>
-    <main class="container my-5">
-        <div class="row align-items-center">
-            <div class="col-md-6 text-center">
-                <img src="../assets/cp_sacola.jpeg" alt="Garrafa Sustentável" class="img-fluid rounded shadow">
-            </div>
 
-            <div class="col-md-6">
-                <h2 class="produto-titulo">Garrafa Sustentável 750ml</h2>
-                <p class="produto-descricao">
-                    Garrafa ecológica feita com material 100% reciclado, ideal para uso diário!
-                    Mantém a temperatura da bebida por até 12 horas e contribui para a preservação do meio ambiente.
-                </p>
-                <ul class="produto-caracteristicas">
-                    <li>Capacidade: 750ml</li>
-                    <li>Material: Plástico reciclado</li>
-                    <li>Isolamento térmico</li>
-                    <li>Cor: Verde</li>
-                </ul>
-                <h3 class="produto-preco">R$ 49,90</h3>
-                <button class="btn btn-success btn-lg mt-3">Compre agora</button>
-                <button class="btn btn-outline-light btn-lg mt-3 ms-2">Adicionar ao Carrinho</button>
-            </div>
-        </div>
-    </main>
+  <nav class="navbar navbar-expand-lg bgVerde sticky-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand font-weight-bold textBege" href="#">Sussa</a>
+      <button class="navbar-toggler border-0 textBege" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+        <i class="bi bi-list fs-1"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav ml-auto d-flex align-items-center">
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../../index.html">Início</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/categorias.html">Categorias</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/contato.html">Contatos</a></li>
+          <li class="nav-item"><a class="nav-link textBege font-weight-bold" href="../Pages/detalhamento.html">Detalhamento</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <section class="container my-5">
-        <h3 class="text-success mb-4">Produtos Relacionados</h3>
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="card h-100 shadow">
-                    <img src="../assets/cp_caneca.webp" class="card-img-top" alt="Caneca Sustentável">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Caneca Sustentável</h5>
-                        <p class="card-text">Feita com bambu natural, perfeita para bebidas quentes.</p>
-                        <a href="#" class="btn btn-success">Compre agora</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card h-100 shadow">
-                    <img src="../assets/cp_sacola.jpeg" class="card-img-top" alt="Sacola Ecológica">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Sacola Ecológica</h5>
-                        <p class="card-text">Produzida com algodão orgânico, resistente e reutilizável.</p>
-                        <a href="#" class="btn btn-success">Compre agora</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card h-100 shadow">
-                    <img src="../assets/cp_canudo.jpg" class="card-img-top" alt="Canudo Reutilizável">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Canudo Reutilizável</h5>
-                        <p class="card-text">Aço inoxidável, fácil de limpar e vem com estojo portátil.</p>
-                        <a href="#" class="btn btn-success">Compre agora</a>
-                    </div>
-                </div>
-            </div>
+  <main class="container my-5">
+    <div class="row align-items-center">
+      <div class="col-md-6 text-center">
+        <img src="../assets/cp_garrafa.webp" alt="Garrafa Sustentável" class="img-fluid rounded shadow">
+      </div>
+
+      <div class="col-md-6">
+        <h2 class="titulo-produto">Garrafa Sustentável 750ml</h2>
+        <p class="descricao-produto">
+          Garrafa ecológica feita com material 100% reciclado, ideal para uso diário!
+          Mantém a temperatura da bebida por até 12 horas e contribui para a preservação do meio ambiente.
+        </p>
+        <ul class="caracteristicas-produto">
+          <li>Capacidade: 750ml</li>
+          <li>Material: Plástico reciclado</li>
+          <li>Isolamento térmico</li>
+          <li>Cor: Verde</li>
+        </ul>
+        <h3 class="preco-produto">R$ 49,90</h3>
+        <button class="btn btn-success btn-lg mt-3">Compre agora</button>
+        <button class="btn btn-outline-light btn-lg mt-3 ms-2">Adicionar ao Carrinho</button>
+      </div>
+    </div>
+  </main>
+
+ 
+  <footer class="bgVerde textBege pt-5 pb-3 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5 class="font-weight-bold">Sussa</h5>
+          <p class="small">Sua experiência digital com sustentabilidade.</p>
         </div>
-    </section>
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Links rápidos</h6>
+          <ul class="list-unstyled">
+            <li><a class="footerLink" href="../../index.html">Início</a></li>
+            <li><a class="footerLink" href="../Pages/categorias.html">Categorias</a></li>
+            <li><a class="footerLink" href="../Pages/contato.html">Contatos</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Siga-nos</h6>
+          <div class="d-flex">
+            <a href="#" class="footerLink mr-3 fs-4"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="footerLink mr-3 fs-4"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="footerLink fs-4"><i class="bi bi-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center mt-4">
+        <small>© 2025 Sussa - Todos os direitos reservados</small>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
